# vnpy

./: .gitignore  AGENTS.md  ARCHITECTURE_BIG_DIAGRAM.md  ARCHITECTURE_MAP.md  BANKNIFTY_ATM_OPTION_STRATEGY_DESIGN.md  BAR_DATA_FLOW.md  CHANGELOG.md  EVENT_LOOP_ARCHITECTURE.md  EXECUTION_ALGOS_GUIDE.md  EXTENSIONS.md  EXTENSIONS_ENGLISH.md  GATEWAY_ARCHITECTURE.md  GUI_INTEGRATION_ANALYSIS.md  INDIAN_MARKET_BACKTESTING.md  OMS_GUIDE.md  OPTION_STRATEGY_GUIDE.md  PERSISTENCE_RECOVERY.md  PRODUCTION_CHECKLIST.md  PRODUCTION_GAP_ANALYSIS.md  QWEN.md  STRATEGY_ENGINES.md  TRANSLATION_COMPLETE.md  qwen-code-export-2026-02-23T00-48-38-837Z.html  run.py  translation_report.txt
docs/: conf.py
docs/architecture/: COMPONENTS.md  (+9 more)
vnpy_algotrading/: README.md
vnpy_angelone/: README.md  angelone_gateway_setting.template.json  pyproject.toml
vnpy_angelone/script/: run.py
vnpy_angelone/vnpy_angelone/: __init__.py  angelone_gateway.py  paper_executor.py  settings.py  symbol_mapper.py
vnpy_ctabacktester/: README.md
vnpy_ctastrategy/: README.md
vnpy_datamanager/: README.md
vnpy_datarecorder/: README.md
vnpy_ib/: README.md
vnpy_optionmaster/: README.md
vnpy_paperaccount/: README.md
vnpy_polygon/: README.md
vnpy_portfoliomanager/: README.md
vnpy_portfoliostrategy/: README.md
vnpy_rest/: README.md
vnpy_riskmanager/: README.md  setup.py
vnpy_rpcservice/: README.md
vnpy_rqdata/: README.md
vnpy_scripttrader/: README.md
vnpy_spreadtrading/: CHANGELOG.md  README.md
vnpy_sqlite/: README.md
vnpy_websocket/: README.md
vnpy_webtrader/: README.md
(+151 files in other folders)
